Functionality implemented 1. Aliyun uploader; 2. Project plan implemented; 3. Project management completed.